--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -1117,6 +1117,11 @@
                     calculatorModel = loadedModel;
                 }
             }
+            else if(response.StatusCode == System.Net.HttpStatusCode.NotFound)
+            {
+                //Does not exist, create an empty one
+                calculatorModel = new SavingsCalculatorModel();
+            }
         }
         catch (Exception ex)
         {
